# bitfold

./: Cargo.toml  Cargo.toml.backup  GUIDELINE.md  MIGRATION_SUMMARY.md  README.md  WORKSPACE.md
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  release.yml
crates/bitfold/: Cargo.toml
crates/bitfold-core/: Cargo.toml
crates/bitfold-core/src/: config.rs  interceptor.rs  lib.rs  shared.rs  utilities.rs
crates/bitfold-host/: Cargo.toml
crates/bitfold-host/src/: event_types.rs  lib.rs  peer_session.rs  session.rs  session_manager.rs  socket.rs
crates/bitfold-peer/: Cargo.toml
crates/bitfold-peer/src/: channel_state.rs  command_queue.rs  flow_control.rs  fragment_buffer.rs  pmtu_discovery.rs  unsequenced.rs
crates/bitfold-peer/src/peer/: command_processor.rs  encoder.rs  fragmenter.rs  mod.rs
crates/bitfold-protocol/: Cargo.toml
crates/bitfold-protocol/src/: acknowledgment.rs  bandwidth.rs  channel.rs  command.rs  congestion.rs  lib.rs  packet.rs  sequence_buffer.rs
crates/bitfold-protocol/src/command_codec/: checksum.rs  compression.rs  decoder.rs  mod.rs  tests.rs
crates/bitfold-utilities/: Cargo.toml
crates/bitfold-utilities/src/: lib.rs
crates/bitfold/src/: lib.rs
examples/: client.rs  server.rs
src/: lib.rs
src/core/: config.rs  interceptor.rs  mod.rs  packet_pool.rs
src/host/: event_types.rs  peer_session.rs  session.rs  session_manager.rs  socket.rs
src/peer/: channel_state.rs  command_queue.rs  flow_control.rs  mod.rs  peer_state.rs  pmtu_discovery.rs
src/peer/peer/: command_processor.rs  encoder.rs  fragmenter.rs  mod.rs
src/protocol/: acknowledgment.rs  command.rs  packet.rs
src/protocol/command_codec/: compression.rs  decoder.rs  encoder.rs
src/utilities/: mod.rs
tests/: integration.rs
