[package]
name = "bitfold-core"
description = "Core types, configuration, and utilities for the Bitfold networking library"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# bitfold-core is intentionally dependency-free (only uses std)

[lints]
workspace = true
