[package]
name = "bitfold-core"
description = "Core types, configuration, and utilities for the Bitfold networking library"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dns-lookup = { workspace = true }

[lints]
workspace = true
